--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
       {
         "source": "/sans",
         "destination": "https://sans-chat-bremgovis-projects.vercel.app/HTML/index.html"
+      },
+      {
+        "source": "/",
+        "destination": "bremgovi.com"
       }
     ]
 }
